examples/test/testpolicy18610.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18610
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key43: value14
      key22: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value14
          key32: value6
          key23: value25
      podSelector:
        matchLabels:
          key20: value2
          key49: value14
